--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" type="text/css" href="CSS/Footer-menu.css">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald:400">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="JS/Scroll.js"></script>
 </head>
 
