--- a/Pages/MPScontact.html
+++ b/Pages/MPScontact.html
@@ -5,8 +5,8 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <title>Контакты</title>
-  <link rel="shortcut icon" href="Images/Icon.gif" type="favicon/ico">
-  <link rel="stylesheet" type="text/css" href="Css/Footer.css">
+  <link rel="shortcut icon" href="../Images/Icon.gif" type="favicon/ico">
+  <link rel="stylesheet" type="text/css" href="../CSS/Footer.css">
   <link rel="stylesheet" type="text/css" href="Css/Footer-menu.css">
   <link rel="stylesheet" type="text/css" href="Css/Contact.css">
   <link rel="stylesheet" type="text/css" href="Css/Header.css">
