--- a/Pages/MPSinnovation.html
+++ b/Pages/MPSinnovation.html
@@ -5,14 +5,14 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <title>Инновации</title>
-  <link rel="shortcut icon" href="Images/Icon.gif" type="favicon/ico">
-  <link rel="stylesheet" type="text/css" href="Css/Subscribe.css">
-  <link rel="stylesheet" type="text/css" href="Css/Footer.css">
-  <link rel="stylesheet" type="text/css" href="Css/Footer-menu.css">
-  <link rel="stylesheet" type="text/css" href="Css/Gallery.css">
-  <link rel="stylesheet" type="text/css" href="Css/Header.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="JS/Scroll.js"></script>
+  <link rel="shortcut icon" href="../Images/Icon.gif" type="favicon/ico">
+  <link rel="stylesheet" type="text/css" href="../CSS/Subscribe.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/Footer.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/Footer-menu.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/Gallery.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/Header.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="../JS/Scroll.js"></script>
 </head>
 
 <body style="margin: 0px; background-color: rgb(44%, 44%, 44%, 0.1)">
@@ -25,14 +25,14 @@
         <div class="header-contact-item">
           <a href="#" title="Search">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#search"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#search"></use>
             </svg>
           </a>
         </div>
         <div class="header-contact-item">
           <a href="#" title="Email">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#email"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#email"></use>
             </svg>
           </a>
         </div>
@@ -41,15 +41,15 @@
       <div class="header-menu">
         <nav>
           <span>
-            <a href="MPS.html" alt="Главная" title="Главная">
+            <a href="../index.html" alt="Главная" title="Главная">
               Главная</a>
           </span>
           <span>
-            <a href="MPSprojects.html" alt="Проекты" title="Проекты">
+            <a href="../Pages/MPSprojects.html" alt="Проекты" title="Проекты">
               Проекты</a>
           </span>
           <span>
-            <a href="MPScontact.html" alt="Контакты" title="Контакты">
+            <a href="../Pages/MPScontact.html" alt="Контакты" title="Контакты">
               Контакты</a>
           </span>
           <span>
@@ -61,7 +61,7 @@
 
       <div class="header-menu-logo">
         <svg class="header-menu-logo-svg" viewBox="0 0 16000 9000" xmlns="http://www.w3.org/2000/svg">
-          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Logo2.svg#MPS"></use>
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Logo2.svg#MPS"></use>
         </svg>
       </div>
 
@@ -93,13 +93,13 @@
         <ul class="lb-album">
           <li>
             <a href="#image-1" title="Умные очки">
-              <img src="Images/Innovation/Innov1.jpeg" alt="Умные очки" title="Умные очки">
+              <img src="../Images/Innovation/Innov1.jpeg" alt="Умные очки" title="Умные очки">
               <span>Умные очки</span>
             </a>
 
             <div class="lb-overlay" id="image-1">
               <a href="#page" class="lb-close" title="Умные очки">
-                <img src="Images/Innovation/Innov1.jpeg" alt="Умные очки" title="Умные очки">
+                <img src="../Images/Innovation/Innov1.jpeg" alt="Умные очки" title="Умные очки">
               </a>
               <div>
                 <h3>Умные очки<span><br>Новая технология</span></h3>
@@ -111,12 +111,12 @@
           </li>
           <li>
             <a href="#image-2" title="Дроны">
-              <img src="Images/Innovation/Innov3.jpeg" alt="Дроны" title="Дроны">
+              <img src="../Images/Innovation/Innov3.jpeg" alt="Дроны" title="Дроны">
               <span>Дроны</span>
             </a>
             <div class="lb-overlay" id="image-2">
               <a href="#page" class="lb-close" title="Дроны">
-                <img src="Images/Innovation/Innov3.jpeg" alt="Дроны" title="Дроны">
+                <img src="../Images/Innovation/Innov3.jpeg" alt="Дроны" title="Дроны">
               </a>
               <div>
                 <h3>Дроны<span><br>Новый подход к строительству</span></h3>
@@ -128,12 +128,12 @@
           </li>
           <li>
             <a href="#image-3" title="Костюм Дублер">
-              <img src="Images/Innovation/Innov4.jpg" alt="Костюм Дублер" title="Костюм Дублер">
+              <img src="../Images/Innovation/Innov4.jpg" alt="Костюм Дублер" title="Костюм Дублер">
               <span>Костюм &laquo;Дублер&raquo;</span>
             </a>
             <div class="lb-overlay" id="image-3">
               <a href="#page" class="lb-close" title="Костюм Дублер">
-                <img src="Images/Innovation/Innov4.jpg" alt="Костюм Дублер" title="Костюм Дублер">
+                <img src="../Images/Innovation/Innov4.jpg" alt="Костюм Дублер" title="Костюм Дублер">
               </a>
               <div>
                 <h3>Костюм &laquo;Дублер&raquo;<span><br></span></h3>
@@ -145,12 +145,12 @@
           </li>
           <li>
             <a href="#image-4" title="3D печать">
-              <img src="Images/Innovation/Innov5.jpeg" alt="3D печать" title="3D печать">
+              <img src="../Images/Innovation/Innov5.jpeg" alt="3D печать" title="3D печать">
               <span>3D печать</span>
             </a>
             <div class="lb-overlay" id="image-4">
               <a href="#page" class="lb-close" title="3D печать">
-                <img src="Images/Innovation/Innov5.jpeg" alt="3D печать" title="3D печать">
+                <img src="../Images/Innovation/Innov5.jpeg" alt="3D печать" title="3D печать">
               </a>
               <div>
                 <h3>3D печать<span><br></span></h3>
@@ -162,12 +162,12 @@
           </li>
           <li>
             <a href="#image-5" title="Роботы вместо людей">
-              <img src="Images/Innovation/Innov6.jpeg" alt="Роботы вместо людей" title="Роботы вместо людей">
+              <img src="../Images/Innovation/Innov6.jpeg" alt="Роботы вместо людей" title="Роботы вместо людей">
               <span>Роботы вместо людей</span>
             </a>
             <div class="lb-overlay" id="image-5">
               <a href="#page" class="lb-close" title="Роботы вместо людей">
-                <img src="Images/Innovation/Innov6.jpeg" alt="Роботы вместо людей">
+                <img src="../Images/Innovation/Innov6.jpeg" alt="Роботы вместо людей">
               </a>
               <div>
                 <h3>Роботы вместо людей<span><br></span></h3>
@@ -179,13 +179,13 @@
           </li>
           <li>
             <a href="#image-6" title="Самовосстанавливающиеся бетон">
-              <img src="Images/Innovation/Innov7.jpeg" alt="Самовосстанавливающиеся бетон"
+              <img src="../Images/Innovation/Innov7.jpeg" alt="Самовосстанавливающиеся бетон"
                 title="Самовосстанавливающиеся бетон">
               <span>Бетон с восстановлением</span>
             </a>
             <div class="lb-overlay" id="image-6">
               <a href="#page" class="lb-close" title="Самовосстанавливающиеся бетон">
-                <img src="Images/Innovation/Innov7.jpeg" alt="Самовосстанавливающиеся бетон"
+                <img src="../Images/Innovation/Innov7.jpeg" alt="Самовосстанавливающиеся бетон"
                   title="Самовосстанавливающиеся бетон">
               </a>
               <div>
@@ -205,7 +205,7 @@
   <footer>
 
     <a href="#" class="scroll-up" title="Вверх" style="display: inline;">Scroll</a>
-    <script type="text/javascript" src="JS/Scroll.js"></script>
+    <script type="text/javascript" src="../JS/Scroll.js"></script>
 
     <div class="footer-menu-wrapper">
 
@@ -213,21 +213,21 @@
         <div id="twitter" class="footer-contact-item">
           <a href="https://twitter.com" target="_blank" title="Twitter">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#twitter"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#twitter"></use>
             </svg>
           </a>
         </div>
         <div id="facebook" class="footer-contact-item">
           <a href="https://www.facebook.com" target="_blank" title="Facebook">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#facebook"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#facebook"></use>
             </svg>
           </a>
         </div>
         <div id="gmail" class="footer-contact-item">
           <a href="https://plus.google.com" target="_blank" title="Gmail">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#gmail"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#gmail"></use>
             </svg>
           </a>
         </div>
