--- a/Pages/MPSprojects.html
+++ b/Pages/MPSprojects.html
@@ -5,14 +5,14 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <title>Проекты</title>
-  <link rel="shortcut icon" href="Images/Icon.gif" type="favicon/ico">
-  <link rel="stylesheet" type="text/css" href="Css/Subscribe.css">
-  <link rel="stylesheet" type="text/css" href="Css/Footer.css">
-  <link rel="stylesheet" type="text/css" href="Css/Footer-menu.css">
-  <link rel="stylesheet" type="text/css" href="Css/Gallery.css">
-  <link rel="stylesheet" type="text/css" href="Css/Header.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="JS/Scroll.js"></script>
+  <link rel="shortcut icon" href="../Images/Icon.gif" type="favicon/ico">
+  <link rel="stylesheet" type="text/css" href="../CSS/Subscribe.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/Footer.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/Footer-menu.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/Gallery.css">
+  <link rel="stylesheet" type="text/css" href="sCSS/Header.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="../JS/Scroll.js"></script>
 </head>
 
 <body style="margin: 0px; background-color: rgb(44%, 44%, 44%, 0.1)">
@@ -25,14 +25,14 @@
         <div class="header-contact-item">
           <a href="#" title="Search">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#search"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#search"></use>
             </svg>
           </a>
         </div>
         <div class="header-contact-item">
           <a href="#" title="Email">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#email"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#email"></use>
             </svg>
           </a>
         </div>
@@ -41,15 +41,15 @@
       <div class="header-menu">
         <nav>
           <span>
-            <a href="MPS.html" alt="Главная" title="Главная">
+            <a href="../index.html" alt="Главная" title="Главная">
               Главная</a>
           </span>
           <span>
-            <a class="header-menu-item-active" href="MPSprojects.html" alt="Проекты" title="Проекты">
+            <a class="header-menu-item-active" href="../Pages/MPSprojects.html" alt="Проекты" title="Проекты">
               Проекты</a>
           </span>
           <span>
-            <a href="MPScontact.html" alt="Контакты" title="Контакты">
+            <a href="../Pages/MPScontact.html" alt="Контакты" title="Контакты">
               Контакты</a>
           </span>
           <span>
@@ -61,7 +61,7 @@
 
       <div class="header-menu-logo">
         <svg class="header-menu-logo-svg" viewBox="0 0 16000 9000" xmlns="http://www.w3.org/2000/svg">
-          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Logo2.svg#MPS"></use>
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Logo2.svg#MPS"></use>
         </svg>
 
       </div>
@@ -92,14 +92,14 @@
         <ul class="lb-album">
           <li>
             <a href="#image-1" title="ЖК &laquo;Челюскинцев&raquo;">
-              <img src="Images/Project/Project1.jpg" alt="ЖК &laquo;Челюскинцев&raquo;"
+              <img src="../Images/Project/Project1.jpg" alt="ЖК &laquo;Челюскинцев&raquo;"
                 title="ЖК &laquo;Челюскинцев&raquo;">
               <span>ЖК &laquo;Челюскинцев&raquo;</span>
             </a>
 
             <div class="lb-overlay" id="image-1">
               <a href="#page" class="lb-close" title="ЖК &laquo;Челюскинцев&raquo;">
-                <img src="Images/Project/Project1.jpg" alt="ЖК &laquo;Челюскинцев&raquo;"
+                <img src="../Images/Project/Project1.jpg" alt="ЖК &laquo;Челюскинцев&raquo;"
                   title="ЖК &laquo;Челюскинцев&raquo;">
               </a>
               <div>
@@ -111,12 +111,12 @@
           </li>
           <li>
             <a href="#image-2" title="Новая Боровая">
-              <img src="Images/Project/Project2.jpeg" alt="Новая Боровая" title="Новая Боровая">
+              <img src="../Images/Project/Project2.jpeg" alt="Новая Боровая" title="Новая Боровая">
               <span>Новая Боровая</span>
             </a>
             <div class="lb-overlay" id="image-2">
               <a href="#page" class="lb-close" title="Новая Боровая">
-                <img src="Images/Project/Project2.jpeg" alt="Новая Боровая" title="Новая Боровая">
+                <img src="../Images/Project/Project2.jpeg" alt="Новая Боровая" title="Новая Боровая">
               </a>
               <div>
                 <h3>Новая Боровая<span><br>Новый подход к строительству</span></h3>
@@ -126,13 +126,13 @@
           </li>
           <li>
             <a href="#image-3" title="Национальный аэропорт Минск">
-              <img src="Images/Project/Project3.jpeg" alt="Национальный аэропорт Минск"
+              <img src="../Images/Project/Project3.jpeg" alt="Национальный аэропорт Минск"
                 title="Национальный аэропорт Минск">
               <span>Национальный аэропорт Минск</span>
             </a>
             <div class="lb-overlay" id="image-3">
               <a href="#page" class="lb-close" title="Национальный аэропорт Минск">
-                <img src="Images/Project/Project3.jpeg" alt="Национальный аэропорт Минск"
+                <img src="../Images/Project/Project3.jpeg" alt="Национальный аэропорт Минск"
                   title="Национальный аэропорт Минск">
               </a>
               <div>
@@ -143,13 +143,13 @@
           </li>
           <li>
             <a href="#image-4" title="Детский садик &laquo;Жираф&raquo;">
-              <img src="Images/Project/Project4.jpeg" alt="Детский садик &laquo;Жираф&raquo;"
+              <img src="../Images/Project/Project4.jpeg" alt="Детский садик &laquo;Жираф&raquo;"
                 title="Детский садик &laquo;Жираф&raquo;">
               <span>Детский садик &laquo;Жираф&raquo;</span>
             </a>
             <div class="lb-overlay" id="image-4">
               <a href="#page" class="lb-close" title="Детский садик &laquo;Жираф&raquo;">
-                <img src="Images/Project/Project4.jpeg" alt="Детский садик &laquo;Жираф&raquo;"
+                <img src="../Images/Project/Project4.jpeg" alt="Детский садик &laquo;Жираф&raquo;"
                   title="Детский садик &laquo;Жираф&raquo;">
               </a>
               <div>
@@ -160,12 +160,12 @@
           </li>
           <li>
             <a href="#image-5" title="ЖК &laquo;Пирс&raquo;">
-              <img src="Images/Project/Project5.jpeg" alt="ЖК &laquo;Пирс&raquo;" title="IЖК &laquo;Пирс&raquo;">
+              <img src="../Images/Project/Project5.jpeg" alt="ЖК &laquo;Пирс&raquo;" title="IЖК &laquo;Пирс&raquo;">
               <span>ЖК &laquo;Пирс&raquo;</span>
             </a>
             <div class="lb-overlay" id="image-5">
               <a href="#page" class="lb-close" title="ЖК &laquo;Пирс&raquo;">
-                <img src="Images/Project/Project5.jpeg" alt="ЖК &laquo;Пирс&raquo;">
+                <img src="../Images/Project/Project5.jpeg" alt="ЖК &laquo;Пирс&raquo;">
               </a>
               <div>
                 <h3>ЖК &laquo;Пирс&raquo;<span><br></span></h3>
@@ -175,12 +175,12 @@
           </li>
           <li>
             <a href="#image-6" title="Отель &laquo;Кемпинский&raquo;">
-              <img src="Images/Project/Project6.jpeg" alt="Отель Кемпинский" title="Отель &laquo;Кемпинский&raquo;">
+              <img src="../Images/Project/Project6.jpeg" alt="Отель Кемпинский" title="Отель &laquo;Кемпинский&raquo;">
               <span>Отель &laquo;Кемпинский&raquo;</span>
             </a>
             <div class="lb-overlay" id="image-6">
               <a href="#page" class="lb-close" title="Отель Кемпинский">
-                <img src="Images/Project/Project6.jpeg" alt="Отель Кемпинский" title="Отель &laquo;Кемпинский&raquo;">
+                <img src="../Images/Project/Project6.jpeg" alt="Отель Кемпинский" title="Отель &laquo;Кемпинский&raquo;">
               </a>
               <div>
                 <h3>Отель &laquo;Кемпинский&raquo;<span><br></span></h3>
@@ -197,7 +197,7 @@
   <footer>
 
     <a href="#" class="scroll-up" title="Вверх" style="display: none;">Scroll</a>
-    <script type="text/javascript" src="JS/Scroll.js"></script>
+    <script type="text/javascript" src="../JS/Scroll.js"></script>
 
     <div class="footer-menu-wrapper">
 
@@ -205,21 +205,21 @@
         <div id="twitter" class="footer-contact-item">
           <a href="https://twitter.com" target="_blank" title="Twitter">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#twitter"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#twitter"></use>
             </svg>
           </a>
         </div>
         <div id="facebook" class="footer-contact-item">
           <a href="https://www.facebook.com" target="_blank" title="Facebook">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#facebook"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#facebook"></use>
             </svg>
           </a>
         </div>
         <div id="gmail" class="footer-contact-item">
           <a href="https://plus.google.com" target="_blank" title="Gmail">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#gmail"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#gmail"></use>
             </svg>
           </a>
         </div>
