--- a/Pages/MPShilti.html
+++ b/Pages/MPShilti.html
@@ -5,14 +5,14 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <title>Партнёр</title>
-  <link rel="shortcut icon" href="Images/Icon.gif" type="favicon/ico">
-  <link rel="stylesheet" type="text/css" href="Css/Subscribe.css">
-  <link rel="stylesheet" type="text/css" href="Css/Footer.css">
-  <link rel="stylesheet" type="text/css" href="Css/Footer-menu.css">
-  <link rel="stylesheet" type="text/css" href="Css/Gallery.css">
-  <link rel="stylesheet" type="text/css" href="Css/Header.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="JS/Scroll.js"></script>
+  <link rel="shortcut icon" href="../Images/Icon.gif" type="favicon/ico">
+  <link rel="stylesheet" type="text/css" href="../CSS/Subscribe.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/Footer.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/Footer-menu.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/Gallery.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/Header.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="../JS/Scroll.js"></script>
 </head>
 
 <body style="margin: 0px; background-color: rgb(44%, 44%, 44%, 0.17)">
@@ -25,14 +25,14 @@
         <div class="header-contact-item">
           <a href="#" title="Search">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#search"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#search"></use>
             </svg>
           </a>
         </div>
         <div class="header-contact-item">
           <a href="#" title="Email">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#email"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#email"></use>
             </svg>
           </a>
         </div>
@@ -41,15 +41,15 @@
       <div class="header-menu">
         <nav>
           <span>
-            <a href="MPS.html" alt="Главная" title="Главная">
+            <a href="../index.html" alt="Главная" title="Главная">
               Главная</a>
           </span>
           <span>
-            <a href="MPSprojects.html" alt="Проекты" title="Проекты">
+            <a href="../Pages/MPSprojects.html" alt="Проекты" title="Проекты">
               Проекты</a>
           </span>
           <span>
-            <a href="MPScontact.html" alt="Контакты" title="Контакты">
+            <a href="../Pages/MPScontact.html" alt="Контакты" title="Контакты">
               Контакты</a>
           </span>
           <span>
@@ -61,7 +61,7 @@
 
       <div class="header-menu-logo">
         <svg class="header-menu-logo-svg" viewBox="0 0 16000 9000" xmlns="http://www.w3.org/2000/svg">
-          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Logo2.svg#MPS"></use>
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Logo2.svg#MPS"></use>
         </svg>
       </div>
 
@@ -95,13 +95,13 @@
         <ul class="lb-album">
           <li>
             <a href="#image-1" title="Перфоратор">
-              <img src="Images/Hilti/Hilti1.jpg" alt="Перфоратор" title="Перфоратор">
+              <img src="../Images/Hilti/Hilti1.jpg" alt="Перфоратор" title="Перфоратор">
               <span>Перфоратор</span>
             </a>
 
             <div class="lb-overlay" id="image-1">
               <a href="#page" class="lb-close" title="Перфоратор">
-                <img src="Images/Hilti/Hilti1.jpg" alt="Перфоратор" title="Перфоратор">
+                <img src="../Images/Hilti/Hilti1.jpg" alt="Перфоратор" title="Перфоратор">
               </a>
               <div>
                 <h3>Перфоратор<span><br></span></h3>
@@ -113,12 +113,12 @@
           </li>
           <li>
             <a href="#image-2" title="Углошлифовальная машинка">
-              <img src="Images/Hilti/Hilti2.jpg" alt="Углошлифовальная машинка" title="Углошлифовальная машинка">
+              <img src="../Images/Hilti/Hilti2.jpg" alt="Углошлифовальная машинка" title="Углошлифовальная машинка">
               <span>Углошлифовальная машинка</span>
             </a>
             <div class="lb-overlay" id="image-2">
               <a href="#page" class="lb-close" title="Углошлифовальная машинка">
-                <img src="Images/Hilti/Hilti2.jpg" alt="Дроны" title="Углошлифовальная машинка">
+                <img src="../Images/Hilti/Hilti2.jpg" alt="Дроны" title="Углошлифовальная машинка">
               </a>
               <div>
                 <h3>Углошлифовальная машинка<span><br></span></h3>
@@ -129,12 +129,12 @@
           </li>
           <li>
             <a href="#image-3" title="Установка алмазного бурения">
-              <img src="Images/Hilti/Hilti3.jpg" alt="Установка алмазного бурения" title="Установка алмазного бурения">
+              <img src="../Images/Hilti/Hilti3.jpg" alt="Установка алмазного бурения" title="Установка алмазного бурения">
               <span>Установка алмазного бурения</span>
             </a>
             <div class="lb-overlay" id="image-3">
               <a href="#page" class="lb-close" title="Установка алмазного бурения">
-                <img src="Images/Hilti/Hilti3.jpg" alt="Установка алмазного бурения"
+                <img src="../Images/Hilti/Hilti3.jpg" alt="Установка алмазного бурения"
                   title="КУстановка алмазного бурения">
               </a>
               <div>
@@ -146,12 +146,12 @@
           </li>
           <li>
             <a href="#image-4" title="Химический анкер">
-              <img src="Images/Hilti/Hilti4.jpg" alt="Химический анкер" title="Химический анкер">
+              <img src="../Images/Hilti/Hilti4.jpg" alt="Химический анкер" title="Химический анкер">
               <span>Химический анкер</span>
             </a>
             <div class="lb-overlay" id="image-4">
               <a href="#page" class="lb-close" title="Химический анкер">
-                <img src="Images/Hilti/Hilti4.jpg" alt="Химический анкер" title="Химический анкер">
+                <img src="../Images/Hilti/Hilti4.jpg" alt="Химический анкер" title="Химический анкер">
               </a>
               <div>
                 <h3>Химический анкер<span><br></span></h3>
@@ -162,12 +162,12 @@
           </li>
           <li>
             <a href="#image-5" title="Многофункциональный пылесос">
-              <img src="Images/Hilti/Hilti5.png" alt="Многофункциональный пылесос" title="Многофункциональный пылесос">
+              <img src="../Images/Hilti/Hilti5.png" alt="Многофункциональный пылесос" title="Многофункциональный пылесос">
               <span>Многофункциональный пылесос</span>
             </a>
             <div class="lb-overlay" id="image-5">
               <a href="#page" class="lb-close" title="Многофункциональный пылесос">
-                <img src="Images/Hilti/Hilti5.png" alt="Многофункциональный пылесос">
+                <img src="../Images/Hilti/Hilti5.png" alt="Многофункциональный пылесос">
               </a>
               <div>
                 <h3>Пылесос<span><br></span></h3>
@@ -178,12 +178,12 @@
           </li>
           <li>
             <a href="#image-6" title="Стенорезная машина">
-              <img src="Images/Hilti/Hilti6.png" alt="Стенорезная машина" title="Стенорезная машина">
+              <img src="../Images/Hilti/Hilti6.png" alt="Стенорезная машина" title="Стенорезная машина">
               <span>Стенорезная машина</span>
             </a>
             <div class="lb-overlay" id="image-6">
               <a href="#page" class="lb-close" title="Стенорезная машина">
-                <img src="Images/Hilti/Hilti6.png" alt="Стенорезная машина" title="Стенорезная машина">
+                <img src="../Images/Hilti/Hilti6.png" alt="Стенорезная машина" title="Стенорезная машина">
               </a>
               <div>
                 <h3>Стенорезная машина<span><br></span></h3>
@@ -201,7 +201,7 @@
   <footer>
 
     <a href="#" class="scroll-up" title="Вверх" style="display: none;">Scroll</a>
-    <script type="text/javascript" src="JS/Scroll.js"></script>
+    <script type="text/javascript" src="../JS/Scroll.js"></script>
 
     <div class="footer-menu-wrapper">
 
@@ -209,21 +209,21 @@
         <div id="twitter" class="footer-contact-item">
           <a href="https://twitter.com" target="_blank" title="Twitter">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#twitter"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#twitter"></use>
             </svg>
           </a>
         </div>
         <div id="facebook" class="footer-contact-item">
           <a href="https://www.facebook.com" target="_blank" title="Facebook">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#facebook"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#facebook"></use>
             </svg>
           </a>
         </div>
         <div id="gmail" class="footer-contact-item">
           <a href="https://plus.google.com" target="_blank" title="Gmail">
             <svg xmlns="http://www.w3.org/2000/svg">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="SVG/Search1.svg#gmail"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="../SVG/Search1.svg#gmail"></use>
             </svg>
           </a>
         </div>
