--- a/Pages/MPScontact.html
+++ b/Pages/MPScontact.html
@@ -7,7 +7,7 @@
   <title>Контакты</title>
   <link rel="shortcut icon" href="../Images/Icon.gif" type="favicon/ico">
   <link rel="stylesheet" type="text/css" href="../CSS/Footer.css">
-  <link rel="stylesheet" type="text/css" href=".../CSS/Footer-menu.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/Footer-menu.css">
   <link rel="stylesheet" type="text/css" href="../CSS/Contact.css">
   <link rel="stylesheet" type="text/css" href="../CSS/Header.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -41,7 +41,7 @@
       <div class="header-menu">
         <nav>
           <span>
-            <a href="../Pages/index.html" alt="Главная" title="Главная">
+            <a href="../index.html" alt="Главная" title="Главная">
               Главная</a>
           </span>
           <span>
@@ -122,7 +122,7 @@
       <div class="contact-form">Напишите нам</div>
 
       <form id="form" class="form" onsubmit="return validateForm()" method="get"
-        action="http://fe.it-academy.by/TestForm.php">
+        action="https://fe.it-academy.by/TestForm.php">
         <div class="form-title">
           <h4>
             Тема вашего сообщения
