--- a/Pages/MPSprojects.html
+++ b/Pages/MPSprojects.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="../CSS/Footer.css">
   <link rel="stylesheet" type="text/css" href="../CSS/Footer-menu.css">
   <link rel="stylesheet" type="text/css" href="../CSS/Gallery.css">
-  <link rel="stylesheet" type="text/css" href="sCSS/Header.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/Header.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="../JS/Scroll.js"></script>
 </head>
